# geolocator

./: Cargo.toml  LICENSE
examples/: current_position.rs  watch_position.rs
src/: geolocator.rs  lib.rs
src/backend/: mod.rs
src/backend/windows_runtime/: mod.rs
